--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
-{
+﻿{
   "name": "arts-leap",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.1",
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "firebase": "^12.3.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "dev": "npm-run-all -p dev:*",
+    "dev:frontend": "npm run -w ./frontend dev",
+    "dev:backend": "npm run -w ./backend dev",
+    "build": "npm-run-all -s build:*",
+    "build:frontend": "npm run -w ./frontend build",
+    "build:backend": "npm run -w ./backend build",
+    "start": "npm-run-all -p start:*",
+    "start:frontend": "npm run -w ./frontend start",
+    "start:backend": "npm run -w ./backend start"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "npm-run-all": "^4.1.5"
   }
 }
